# 2024-cpl-coding-6

./: CMakeLists.txt  LICENSE  README.md
0-intro/: CMakeLists.txt  guess.c  guess_teacher_version.c  hello.c  test.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c  test.c  test2.c
2-if-for-array/: CMakeLists.txt  leap-year-if-cascade-version.c  leap-year-if-flowchat.c  leap-year-if-ultimate-version.c  leap-yer-if-inverse-version.c  min-array-input.c  min-array.c  min-of-three.c  min.c
3-for-a-while/: CMakeLists.txt  binary-search.c  digits-do-while.c  digits-for.c  digits-while.c  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  game-of-life-opt-version.c  game-of-life-teacher-version.c  game-of-life.c  insertion.c  merge.c
5-function/: CMakeLists.txt  binary-search.c  game-of-lift-function.c  leap.c  palindrome.c  primes.c  selection-sort.c  stars.c
6-data-types/: document.md
7-pointers-arrays/: CMakeLists.txt  pointer-const.c  pointer.c  selection-sort.c
8-pointer-c-strings/: CMakeLists.txt  str-literals.c
bitwise-operator/: swap.c  test.c  test2.c  textbook_example.c
oj/: CMakeLists.txt  change.c  factorial-1.c  pi-2.c
oj/lecture2/: b-ternary-1.c  flip.c  josephus.c  palindrome-1.c  test_conjuncture.c
recursive/: Fibonacci-sequence.c
test/: Base64_coding.c  char-array-test.c  simple-hash-imp.c  test.c  test2.c  test3.c  test4.c  test5.c
